Add game system to game summaries
